# test-packaging

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
hello/: __main__.py
