[tool.poetry]
name = "hello"
version = "0.1.0"
description = "Hello, world!"
authors = ["David Robertson <davidr@element.io>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
lxml = { version = "~4.2.0", markers = "platform_python_implementation == 'PyPy'" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
